examples/test/testpolicy4360.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4360
  namespace: namespace153
spec:
  podSelector:
    matchLabels:
      key21: value46
      key41: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value49
          key0: value38
      podSelector:
        matchLabels:
          key38: value21
          key42: value36
          key18: value30
